# Game-Session-Sync

./: .env.example  .gitignore  AGENTS.md  README.md  config example.yaml  pyproject.toml  settings.yaml  setup.ps1
experiments/: accessability_events.py  accessability_events_names.py  aiogoogle_drive.py  async_debounce.py  asyncio_task_exceptions.py  await_race.py  cancelable_tasks.py  class_usage.py  console.py  dynamic_input_prompt.py  event_driven_architecture.py  fullscreen_detection.py  inheritence.py  notifications.py  process_exit_hook.py  pydrive2_scripts.py  raw_input_idle.py  scratchpad.py  ui_automation_events.py  watchdog_experiment.py  wmi_experiment.py  yield_mechanics.py
game_session_sync/: __main__.py  app.py  config.py  constants.py  log_helpers.py  naming_utils.py  notifier_utils.py  path_utils.py  session.py  test_helpers.py  types.py  uploader.py
game_session_sync/screenshot_producers/: __init__.py  periodic_sampler.py  screenshot_watcher.py  types.py  utils.py
game_session_sync/windows_producers/: __init__.py  fullscreen_watcher.py  input_idle_watcher.py  process_watcher.py  types.py  window_watcher.py
scripts/: deploy.ps1  setup.ps1
src/game_session_sync/: __main__.py  config.py  log_helpers.py  naming_utils.py  types.py  uploader.py
src/game_session_sync/screenshot_producers/: periodic_sampler.py  screenshot_watcher.py
src/game_session_sync/windows_producers/: __init__.py  types.py  utils.py  window_watcher.py
tests/: test_application.py
